forgot to commit step by step, basically the whole login/register on the frontend implemation and bugfixes